# diplomacy-analysis

./: 200.html  README.rst  dataAnalysis.ipynb  index.html  index.md  pyproject.toml
_nuxt/: LICENSES
diplomacy_gif_maker/: dataAnalysis.ipynb  develop.sh  package.json  script_testing.ipynb
diplomacy_gif_maker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
diplomacy_gif_maker/.ipynb_checkpoints/: dataAnalysis-checkpoint.ipynb  script_testing-checkpoint.ipynb
diplomacy_gif_maker/.nuxt/: router.js
diplomacy_gif_maker/csv/: orders_full.csv  unitChangeCount_full.csv  unitsByPlayer_full.csv
diplomacy_gif_maker/examples/: sample_js_data.js
diplomacy_gif_maker/frontend/: README.md  package.json
diplomacy_gif_maker/json_data/: 1901_fall_orders_.txt  1901_fall_territories_.txt  1901_fall_unitsByPlayer_.txt  1901_spring_orders_.txt  1901_spring_unitsByPlayer_.txt  1901_winter_orders_.txt  1901_winter_territories_.txt  1901_winter_unitChangeCount_.txt  1901_winter_unitsByPlayer_.txt  1902_fall_orders_.txt  1902_fall_unitsByPlayer_.txt  1902_spring_orders_.txt  1902_spring_unitsByPlayer_.txt  1902_winter_orders_.txt  1902_winter_territories_.txt  1902_winter_unitChangeCount_.txt  1902_winter_unitsByPlayer_.txt  1903_fall_orders_.txt  1903_fall_unitsByPlayer_.txt  1903_spring_orders_.txt  1903_spring_unitsByPlayer_.txt  1903_winter_orders_.txt  1903_winter_unitChangeCount_.txt  1903_winter_unitsByPlayer_.txt  1904_fall_orders_.txt  1904_fall_unitsByPlayer_.txt  1904_spring_orders_.txt  1904_spring_territories_.txt  (+141 more)
tests/: test_diplomacy_gif_maker.py
(+20 files in other folders)
